<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:contetxt="comp3350.GoCart.presentation.UsersActivity">


    <Button
        android:id="@+id/buttonInitializeUpdateName"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:onClick="buttonInitializeUpdateUserNameOnClick"
        android:text="Update"
        app:layout_constraintStart_toStartOf="@+id/textViewUserName"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

    <Button
        android:id="@+id/buttonCompleteUpdateName"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:text="Update"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:onClick="buttonCompleteUpdateUserNameOnClick"
        app:layout_constraintStart_toStartOf="@+id/editViewUserName"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="Name: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

    <EditText
        android:id="@+id/editViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="User Name"
        android:layout_marginStart="100dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone: "
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="User Phone"
        app:layout_constraintStart_toStartOf="@+id/textViewPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />

    <EditText
        android:id="@+id/editViewUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="29dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="User Address"
        app:layout_constraintStart_toStartOf="@+id/textViewPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email: "
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User email"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserPhone" />

    <EditText
        android:id="@+id/editViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="User email"
        android:layout_marginStart="100dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserPhone"
        android:visibility="gone"
        />


    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:text="Change Password"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:onClick="buttonChangePasswordButtonOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:onClick="buttonLogoutOnClick"
        android:text="Logout"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <Button
        android:id="@+id/buttonDeleteUserAccount"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:onClick="buttonDeleteUserAccount"
        android:text="Delete User Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />

    <Button
        android:id="@+id/buttonInitializeUpdatePhone"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:text="Update"
        android:onClick="buttonInitializeUpdateUserPhoneOnClick"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textViewUserPhone"
        app:layout_constraintTop_toBottomOf="@+id/buttonInitializeUpdateName" />

    <Button
        android:id="@+id/buttonCompleteUpdatePhone"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:text="Update"
        android:onClick="buttonCompleteUpdateUserPhoneOnClick"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/editViewUserPhone"
        app:layout_constraintTop_toBottomOf="@+id/buttonInitializeUpdateName"
        android:visibility="gone"
        />


    <Button
        android:id="@+id/buttonInitializeUpdateEmail"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:text="Update"
        android:onClick="buttonInitializeUpdateUserEmailOnClick"
        app:layout_constraintStart_toStartOf="@+id/textViewUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonInitializeUpdatePhone" />

    <Button
        android:id="@+id/buttonCompleteUpdateEmail"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:text="Update"
        android:onClick="buttonCompleteUpdateUserEmailOnClick"
        app:layout_constraintStart_toStartOf="@+id/editViewUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonInitializeUpdatePhone"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>