...
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:onClick="buttonDiscoverDealsOnClick"
        android:text="Discover Deals" />

    <Button
        android:id="@+id/userAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="User Account"
        android:onClick="buttonUserAccountOnClick"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/loginButtonOnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
...
